dfir_rs/tests/compile-fail-stable/surface_syntax_indexing_empty.rs
../compile-fail/surface_syntax_indexing_empty.rs